Medex page updates

--- a/app/views/user-research-journies/medex-research/no-medex-radio.html
+++ b/app/views/user-research-journies/medex-research/no-medex-radio.html
@@ -85,7 +85,7 @@ You didn't have a valid medical exemption certificate
            
          
 
-          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
+          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
           <p><a href="">Print this page</a></p>
          
 
