--- a/app/views/user-research-journies/medex-research/partial-payment-made-medmatex.html
+++ b/app/views/user-research-journies/medex-research/partial-payment-made-medmatex.html
@@ -61,10 +61,10 @@ Payment confirmation
         
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              You still need to pay
+              Remaining amount
             </dt>
             <dd class="nhsuk-summary-list__value">
-              <p >£48.25</p>
+              <p ><b>£48.25</b></p>
             </dd>
         
             
