--- a/app/views/user-research-journies/medex-research/penalty-charge-notice-details-bsa.html
+++ b/app/views/user-research-journies/medex-research/penalty-charge-notice-details-bsa.html
@@ -120,16 +120,27 @@ Penalty Charge Notice
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total amount
+              Total amount to pay
             </dt>
-            <dd class="nhsuk-summary-list__value">
+            <dd class="nhsuk-summary-list__value"style="font-weight: bold;">
               £57.90
             </dd>
 
           </div>
+          
 
 
-        </dl>
+        
+
+          
+
+          
+          
+
+
+        
+
+      
 
        
             
@@ -137,32 +148,16 @@ Penalty Charge Notice
             <p>Your total amount is the penalty charge amount plus your original prescription costs.</p>
          -->
       
-        <h2 class="nhsuk-card__heading">
-          Previous payments
-        </h3>
+        
 
       
-        <dl class="nhsuk-summary-list nhsuk-summary-list">
-
-          <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">
-              Payments made
-            </dt>
-            <dd class="nhsuk-summary-list__value">
-              £7.90
-            </dd>
-
-          </div>
+        
 
           
           
 
 
-        </dl>
-        <p style="font-weight: bold; font-size:36px;">
-         Amount still to pay: £50
-
-        </p>
+        
 
       </div>
     </div>
@@ -278,6 +273,7 @@ Penalty Charge Notice
   </div>
 
 </div>
+
 <a href="what-you-need-to-do-next-bsa" class="nhsuk-button">
   Continue
 </a>
