content updates to enquiry pages

--- a/app/views/v5-enquiry/you-will-be-sent-pcn.html
+++ b/app/views/v5-enquiry/you-will-be-sent-pcn.html
@@ -21,7 +21,7 @@ Start page template - NHS.UK prototype kit
     <p>If you were not entitled to free NHS prescriptions you will be sent a Penalty Charge Notice (PCN).</p>
     <p>We send the enquiry letter before the PCN to give you time to confirm you were entitled to free NHS prescriptions
       which can stop a PCN being issued.</p>
-    <p>The PCN will be issued within [number] of days (by [date]).</p>
+    <p>The PCN will be issued within [number] days (by [date]).</p>
     <p>You will not be able to make a payment until you receive the PCN.</p>
     <p>Once you have received it, you’ll be able to use this service to pay your penalty charge.</p>
     <details class="nhsuk-details">
@@ -32,8 +32,8 @@ Start page template - NHS.UK prototype kit
       </summary>
       <div class="nhsuk-details__text">
         <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you
-          can ask us to review your case.</p>
-        <p><a href="who-can-ask-for-review">Find out if you can ask for a review</a>. </p>
+          can ask us to review your case. <a href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
+        
 
       </div>
     </details>
