--- a/app/views/v5-enquiry/adhoc-screens/case-closed.html
+++ b/app/views/v5-enquiry/adhoc-screens/case-closed.html
@@ -34,7 +34,7 @@ An exemption has been found
     <div class="nhsuk-inset-text">
       <span class="nhsuk-u-visually-hidden">Information: </span>
       <p>Michelle Doe</p>
-      <p>Reference number: 01234567890</p>
+      <p>Reference number 01234567890</p>
     </div>
 
 
