updated med/matex content

--- a/app/views/v5-enquiry/what-happens-next.html
+++ b/app/views/v5-enquiry/what-happens-next.html
@@ -25,8 +25,8 @@
         What happens next?
       </h2>
       <p>We'll try to confirm you were entitled to free NHS prescriptions.</p>
-      <p>If we can confirm you were entitled we'll close your case and no further action will be needed.</p>
-      <p>If we cannot confirm you were entitled you'll be sent  Penalty Charge Notice.</p>
+      <p>If we can confirm you were entitled, we'll close your case and no further action will be needed.</p>
+      <p>If we cannot confirm you were entitled, you'll be sent  Penalty Charge Notice.</p>
       <p>To try and confirm you were entitled we'll:</p>
 <ul>
   <li>ask for some details about your benefit, exemption or prepayment certificate</li>
