--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -355,8 +355,19 @@ NHS.UK prototype kit
           </tbody>
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-              <td class="nhsuk-table__cell">Exemption found - details match & valid - DWP</td>
+              <td class="nhsuk-table__cell">Exemption found - details match & valid - DWP (UC)</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/confirmation-page-dwp">Done. Confirmation page with UC info on</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Exemption found - details match & valid - DWP (Not UC)</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/confirmation-page-dwp-not-uc">Done. Confirmation page with UC info on</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
