--- a/app/views/v5-enquiry/confirmation-page.html
+++ b/app/views/v5-enquiry/confirmation-page.html
@@ -35,7 +35,7 @@ An exemption has been found
       <div class="nhsuk-inset-text">
         <span class="nhsuk-u-visually-hidden">Information: </span>
         <p>Michelle Doe</p>
-        <p>Reference number: 01234567890</p>
+        <p>Reference number 01234567890</p>
       </div>
       
       <p><a href="">Print this page</a></p>
