updated med/matex content

--- a/app/views/v5-enquiry/exemption-certificate-number.html
+++ b/app/views/v5-enquiry/exemption-certificate-number.html
@@ -53,7 +53,7 @@ Did you know your [Benefit] number?
 
             <div class="nhsuk-form-group">
               <label class="nhsuk-label" for="email">
-                [Benefit] number
+                Certificate number
               </label>
               <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber"
                 type="text">
