updated med/matex content

--- a/app/views/user-research-journies/medex-research/were-you-claiming-any-benefits.html
+++ b/app/views/user-research-journies/medex-research/were-you-claiming-any-benefits.html
@@ -29,8 +29,7 @@ Were you claiming any of these benefits?
     <form action="v6-dwp-benefits" method="POST" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
-      <h1 class="nhsuk-heading-l">Were you claiming any of these benefits (or named on them) between 18 November 2019
-        and 30 November 2019?</h1>
+      <h1 class="nhsuk-heading-l">Were you claiming any of these benefits (or named on them) between 13 March 2023 and 31 March 2023??</h1>
       <div class="nhsuk-form-group">
         <div class="nhsuk-radios nhsuk-radios">
           <div class="nhsuk-radios__item">
