updated med/matex content

--- a/app/views/v5-enquiry/you-will-be-sent-pcn.html
+++ b/app/views/v5-enquiry/you-will-be-sent-pcn.html
@@ -21,7 +21,7 @@ Start page template - NHS.UK prototype kit
     <p>If you were not entitled to free NHS prescriptions you will be sent a Penalty Charge Notice (PCN).</p>
     <p>We send the enquiry letter before the PCN to give you time to confirm you were entitled to free NHS prescriptions
       which can stop a PCN being issued.</p>
-    <p>The PCN will be issued within [number] days (by [date]).</p>
+    <p>If you do not confirm you were entitled to free NHS prescriptions within [number] days (by [date]) we will send a PCN.</p>
     <p>You will not be able to make a payment until you receive the PCN.</p>
     <p>Once you have received it, you’ll be able to use this service to pay your penalty charge.</p>
     <details class="nhsuk-details">
