updated med/matex content

--- a/app/views/v5-enquiry/enquiry-letter-details-copy.html
+++ b/app/views/v5-enquiry/enquiry-letter-details-copy.html
@@ -55,18 +55,7 @@
 
        <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
       <p>We have not been able to confirm you were entitled to free NHS prescriptions using these details.</p>
-      <dl class="nhsuk-summary-list">
-
-        <div class="nhsuk-summary-list__row">
-          <dt class="nhsuk-summary-list__key">
-            Date prescription was claimed
-          </dt>
-          <dd class="nhsuk-summary-list__value">
-            Between 1 November and 30 November 2017
-          </dd>
       
-        </div>
-        </dl>
       <h3>Details on the prescription</h3>
       <dl class="nhsuk-summary-list">
         <div class="nhsuk-summary-list__row">
@@ -84,7 +73,7 @@
             Address
           </dt>
           <dd class="nhsuk-summary-list__value">
-            12 Old Oak Road<br>Throckley<br> NE67 9AD
+            12 Old Oak Road<br>Throckley<br> NE2 4XL
           </dd>
       
         </div>
@@ -96,6 +85,15 @@
           <dd class="nhsuk-summary-list__value">
             <p>Has a valid medical exemption certificate</p>
             
+          </dd>
+      
+        </div>
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Date prescription was claimed
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            Between 1 November and 30 November 2017
           </dd>
       
         </div>
