updated med/matex content

--- a/app/views/v5-enquiry/error-messages/radio-error.html
+++ b/app/views/v5-enquiry/error-messages/radio-error.html
@@ -31,7 +31,7 @@ Benefit between 1 November and 30 November 2017
           
             <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
               <li>
-                <a href="#example-error-1">Select yes if you were claiming a benefit (not final content)</a>
+                <a href="#example-error-1">Select yes if you were claiming income-based Jobseeker's Allowance</a>
               </li>
             </ul>
           </div>
@@ -51,8 +51,8 @@ Benefit between 1 November and 30 November 2017
           </div>
 
           <span class="nhsuk-error-message" id="example-error-error">
-            <span class="nhsuk-u-visually-hidden">Error:</span> Select yes if you were claiming a benefit or no if you
-            were not
+            <span class="nhsuk-u-visually-hidden">Error:</span> Select yes if you were claiming income-based Jobseeker's Allowance
+     
           </span>
 
           <div class="nhsuk-radios">
