updated med/matex content

--- a/app/views/v5-enquiry/exemption-certificate-number.html
+++ b/app/views/v5-enquiry/exemption-certificate-number.html
@@ -33,7 +33,7 @@ Did you know your [Benefit] number?
 
 
       <div class="nhsuk-hint" id="contact-hint">
-        You don't have to tell us your certificate number, but telling us can help us find your certificate. You can
+        You do not have to tell us your certificate number, but telling us can help us find your certificate. You can
         find the number on the certificate.
       </div>
 
