--- a/app/views/v6-pcn/penalty-charge-notice-details.html
+++ b/app/views/v6-pcn/penalty-charge-notice-details.html
@@ -141,10 +141,10 @@
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total amount
+              Total amount to pay
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £57.90
+              <strong>£57.90</strong>
             </dd>
 
           </div>
