--- a/app/views/v6-pcn/what-is-your-address-dd.html
+++ b/app/views/v6-pcn/what-is-your-address-dd.html
@@ -56,14 +56,14 @@
 
           <div class="nhsuk-form-group">
                   <label class="nhsuk-label" for="addressline2">
-                  Address line 2 (optional)
+                  Address line 2
               </label>
               <input class="nhsuk-input nhsuk-input--width-20" id="addressline2" name="addressline2" type="text" autocomplete="address-line2">
           </div>
 
           <div class="nhsuk-form-group">
                   <label class="nhsuk-label" for="towncity">
-                  Town or city
+                  Address line 3
               </label>
               <input class="nhsuk-input nhsuk-input--width-20" id="towncity" name="towncity" type="text" autocomplete="address-level2">
           </div>
