--- a/app/views/v5-enquiry/adhoc-screens/we-could-not-verify-extra-details-enquiry.html
+++ b/app/views/v5-enquiry/adhoc-screens/we-could-not-verify-extra-details-enquiry.html
@@ -16,31 +16,31 @@ We could not verify the extra details
 
     <form action="check-name-input" method="get" class="form">
 
-      <span class="nhsuk-caption-l">Confirm your entitlement</span>
-      <h1 class="nhsuk-heading-xl">We could not verify the extra details you supplied</h1>
+      <span class="nhsuk-caption-m">Confirm your entitlement</span>
+      <h1 class="nhsuk-heading-l">We could not verify the extra details you supplied</h1>
       <div class="nhsuk-form-group">
 
 <p>The information you have given us does not prove you were entitled to free or further reduction in the cost of your dental treatment on 18 December 2019.</p>
 
-<h2>What to do next</h2>
+<h2 class="nhsuk-heading-m">What to do next</h2>
 <p>Send us proof that you were entitled to free or reduced cost dental treatment on 19 December 2019.</p>
 
-<a href="url">How to send proof</a>
+<p><a href="/v5-enquiry/we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
 <div></div>
 <p></p>
 
 <p>If you do not send us proof, or we cannot find your exemption, you will be sent a penalty charge notice.</p>
 
-<p>If you were not entitled to free or reduced cost dental treatment but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="url">Find out if you can ask for a review.</a></p>
+<p>If you were not entitled to free or reduced cost dental treatment but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="/v5-enquiry/who-can-ask-for-review">Find out if you can ask for a review.</a></p>
 
-<a href="url">Print this page</a>
+<p><a href="url">Print this page</a></p>
 </div>
 
-<h3>Feedback</h3>
+<h3 class="nhsuk-heading-s">Feedback</h3>
 
-<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us provide a better service.</p>
+<p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 
-<a href="url">Leave feedback</a>
+<p><a href="url">Leave feedback</a></p>
 
    
 
