--- a/app/views/v6-pcn/no-matex-radio.html
+++ b/app/views/v6-pcn/no-matex-radio.html
@@ -14,104 +14,97 @@ You didn't have a valid medical exemption certificate
 
 
 
-<div class="nhsuk-grid-row">
-  <div class="nhsuk-grid-column-two-thirds">
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-two-thirds">
 
-    <div class="nhsuk-back-link">
-      <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-        <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-          <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-        </svg>
-        Go back</a>
-      </div>
-
-
-
-    <span class="nhsuk-caption-m">Confirm your entitlement</span>
-
-    <fieldset class="nhsuk-fieldset">
-      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
-        <h1 class="nhsuk-fieldset__heading">
-          You did not have a valid maternity exemption certificate at the time, but you can still apply
-        </h1>
-      </legend>
-
-      <p>Although you did not have a valid maternity exemption certificate when you claimed a free NHS prescription, you
-        still have the chance to apply.</p>
-        <P>If your application is successful, you will only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
-      <h3>What to do next</h3>
-
-
-
-      <form action="matex-pay" method="get" class="form">
-
-
-        <div class="nhsuk-form-group">
-
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
-              <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                Pay the original £9.65 prescription charge and apply for a maternity exemption certificate
-              </label>
-              
-            </div>
-            <div class="nhsuk-radios__item">
-              <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
-              <label class="nhsuk-label nhsuk-radios__label" for="no">
-                Pay the total amount of £57.90
-              </label>
-
-            </div>
-          </div>
+      <div class="nhsuk-back-link">
+        <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+          <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
+            <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+          </svg>
+          Go back</a>
         </div>
-        <button class="nhsuk-button" type="submit">
-          Continue
-        </button>
 
-      </form>
+      
 
+        <span class="nhsuk-caption-m">Confirm your entitlement</span>
+        
+        <fieldset class="nhsuk-fieldset">
+          <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
+            <h1 class="nhsuk-fieldset__heading">
+              You did not have a valid maternity exemption certificate at the time, but you can still apply
+            </h1>
+          </legend>
 
-
-
-
-
-
-
-
-
-      <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you
-        can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a
-          review</a></p>
-      <p><a href="">Print this page</a></p>
-      <h3>Feedback</h3>
-      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-
-      <p><a href="url">Leave feedback</a></p>
+          <p>Although you did not have a valid maternity exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
+          <P>If your application is successful, you'll only have to pay the original prescription charge. You'll not have to pay your Penalty Charge.</P>
+          <h3>What do you want to do next?</h3>
 
 
 
+          <form action="matex-pay" method="get" class="form">
+
+            
+            <div class="nhsuk-form-group">
+    
+              <div class="nhsuk-radios nhsuk-radios">
+                <div class="nhsuk-radios__item">
+                    <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
+                    <label class="nhsuk-label nhsuk-radios__label" for="yes">
+                      Pay the original £9.65 prescription charge, and apply for a maternity exemption certificate.
+                    </label>
+                    
+                </div>
+                <div class="nhsuk-radios__item">
+                    <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
+                    <label class="nhsuk-label nhsuk-radios__label" for="no">
+                      Pay the total amount of £57.90
+                    </label>
+                    
+                </div>
+            </div>
+              </div>
+              <button class="nhsuk-button" type="submit">
+              Continue
+              </button>
+              
+              </form>
+
+         
+         
+
+     
+
+         
+           
+         
+
+          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
+          <p><a href="">Print this page</a></p>
+          
+              
+              
+                  
+              
+                    
+              
+              
+        
+        
+        
+        
+        </div>
 
 
 
+        </div>
+         
+          
 
+        
+   
 
-
-
-
-
+    </div>
   </div>
-
-
-
-</div>
-
-
-
-
-
-
-</div>
-</div>
 
 {% endblock %}
