--- a/app/views/v6-pcn/respond-to-your-letter.html
+++ b/app/views/v6-pcn/respond-to-your-letter.html
@@ -33,7 +33,7 @@ Respond to your letter
       <p>If you get Universal Credit, your entitlement to help with your health costs depends on your take-home pay in the last assessment period.</p>
       <p> <a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits/hwhc-universal-credit">Read more about Universal Credit exemptions</a>.</p>
       <p>If you are not sure if you were entitled you can <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">check if you are currently entitled to help with your health costs</a>.</p>
-      <p>If you are paying a Penalty Charge Notice you will need your card details. You can pay be credit or debit card, or by Direct Debit.</p>
+      <p>If you are paying a Penalty Charge Notice you will need your card details. You can pay by credit or debit card, or by Direct Debit.</p>
        <a href="enter-reference-number" class="nhsuk-button">
         Start now
       </a>
