--- a/app/views/v5-enquiry/adhoc-screens/we-could-not-verify-extra-details-enquiry.html
+++ b/app/views/v5-enquiry/adhoc-screens/we-could-not-verify-extra-details-enquiry.html
@@ -20,18 +20,17 @@ We could not verify the extra details
       <h1 class="nhsuk-heading-l">We could not verify the extra details you supplied</h1>
       <div class="nhsuk-form-group">
 
-<p>The information you have given us does not prove you were entitled to free or further reduction in the cost of your dental treatment on 18 December 2019.</p>
+<p>The information you’ve given us does not prove you were entitled to free or a further reduction in the cost of your NHS dental treatment on 18 December 2019.</p>
 
-<h2 class="nhsuk-heading-m">What to do next</h2>
-<p>Send us proof that you were entitled to free or reduced cost dental treatment on 19 December 2019.</p>
+<h2 class="nhsuk-heading-m">If you think you were entitled</h2>
+<p>Send us proof to show that you were entitled to free or reduced cost NHS dental treatment. </p>
 
-<p><a href="/v5-enquiry/we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
-<div></div>
-<p></p>
+<p><a href="/v5-enquiry/we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
+<h2 class="nhsuk-heading-m">If you were not entitled</h2>
 
-<p>If you do not send us proof, or we cannot find your exemption, you will be sent a penalty charge notice.</p>
+<p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
 
-<p>If you were not entitled to free or reduced cost dental treatment but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="/v5-enquiry/who-can-ask-for-review">Find out if you can ask for a review.</a></p>
+<p>If you were not entitled to free or reduced cost NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="/v5-enquiry/who-can-ask-for-review">Find out if you can ask for a review.</a></p>
 
 <p><a href="url">Print this page</a></p>
 </div>
@@ -40,7 +39,7 @@ We could not verify the extra details
 
 <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 
-<p><a href="url">Leave feedback</a></p>
+<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback</a></p>
 
    
 
