--- a/app/views/v5-enquiry/adhoc-screens/we-could-not-verify-extra-details-enquiry-pecs.html
+++ b/app/views/v5-enquiry/adhoc-screens/we-could-not-verify-extra-details-enquiry-pecs.html
@@ -20,10 +20,10 @@ We could not verify the extra details
       <h1 class="nhsuk-heading-l">We could not verify the extra details you supplied</h1>
       <div class="nhsuk-form-group">
 
-<p>The information you have given us does not prove you were entitled to free or further reduction in the cost of your dental treatment on 18 December 2019.</p>
+<p>The information you have given us does not prove you were entitled to free NHS prescriptions on 18 December 2019.</p>
 
 <h2 class="nhsuk-heading-m">What to do next</h2>
-<p>Send us proof that you were entitled to free or reduced cost dental treatment on 19 December 2019.</p>
+<p>Send us proof that you were entitled to free NHS prescriptions on 19 December 2019.</p>
 
 <p><a href="/v5-enquiry/we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
 <div></div>
@@ -31,7 +31,7 @@ We could not verify the extra details
 
 <p>If you do not send us proof, or we cannot find your exemption, you will be sent a penalty charge notice.</p>
 
-<p>If you were not entitled to free or reduced cost dental treatment but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="/v5-enquiry/who-can-ask-for-review">Find out if you can ask for a review.</a></p>
+<p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="/v5-enquiry/who-can-ask-for-review">Find out if you can ask for a review.</a></p>
 
 <p><a href="url">Print this page</a></p>
 </div>
