--- a/app/views/v6-pcn/cookies/cookie-confirmation.html
+++ b/app/views/v6-pcn/cookies/cookie-confirmation.html
@@ -17,7 +17,7 @@ Your cookie settings have been saved
     <form action="check-name-input" method="get" class="form">
 
 
-      <h1 class="nhsuk-heading-xl">Your cookie settings have been saved</h1>
+      <h1 class="nhsuk-heading-l">Your cookie settings have been saved</h1>
       <div class="nhsuk-form-group">
 
         <p>We'll save your settings for 90 days.</p>
