--- a/app/views/v6-pcn/cookies/cookie-consent.html
+++ b/app/views/v6-pcn/cookies/cookie-consent.html
@@ -17,12 +17,12 @@ Choose which cookies we use
     <form action="check-name-input" method="get" class="form">
 
 
-      <h1 class="nhsuk-heading-xl">Choose which cookies we use</h1>
+      <h1 class="nhsuk-heading-l">Choose which cookies we use</h1>
       <div class="nhsuk-form-group">
 
         <p>Let us know which cookies we can use. We'll use a cookie to save your settings for the next 90 days. This
           setting applies across all our digital services, not just the one you are accessing.</p>
-        <h2>Cookies that measure website use (analytics cookies)</h2>
+          <h2 class="nhsuk-heading-m">Cookies that measure website use (analytics cookies)</h2>
         <p>These cookies store information about how you use our website, such as the links you click on. We use them to
           help make our website better.</p>
         <details class="nhsuk-details">
@@ -89,9 +89,9 @@ Choose which cookies we use
 
           <fieldset class="nhsuk-fieldset">
             <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
-              <h1 class="nhsuk-fieldset__heading">
+              <h2 class="nhsuk-heading-m">
                 Do you want to allow cookies to measure your website use?
-              </h1>
+              </h2>
             </legend>
 
             <div class="nhsuk-radios">
