--- a/app/views/v6-pcn/check-personal-details-dwp.html
+++ b/app/views/v6-pcn/check-personal-details-dwp.html
@@ -43,7 +43,7 @@
       <form action="confirmation-page-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-m">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">Check that your details on the prescription are correct</h1>
+        <h1 class="nhsuk-heading-l">Check your details are correct</h1>
         
         
         
@@ -148,7 +148,7 @@ They should match what was shown on your exemption or prepayment certificate, or
                 <div class="nhsuk-checkboxes__item">
                   <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message" required>
                   <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
-                   <strong>I confirm that the details on the prescription are correct</strong>
+                   <strong>I confirm that the details are correct</strong>
                   </label>
                 </div>
         
