--- a/app/views/v6-pcn/cookies/our-cookies.html
+++ b/app/views/v6-pcn/cookies/our-cookies.html
@@ -18,15 +18,15 @@ Cookies on the Respond to your letter website
 
 
       
-      <h1 class="nhsuk-heading-xl">Cookies on the Respond to your letter website</h1>
+      <h1 class="nhsuk-heading-l">Cookies on the Respond to your letter website</h1>
       <div class="nhsuk-form-group">
-        <h2>What are cookies?</h2>
+        <h2 class="nhsuk-heading-m">What are cookies?</h2>
 
         <p>Cookies are files saved on your phone, tablet or computer when you visit a website.</p>
         <p>They store information about how you use the website, such as the pages you visit.</p>
         <p>Cookies are not viruses or computer programs. They are very small so do not take up much space.</p>
 
-        <h2>How we use cookies</h2>
+        <h2 class="nhsuk-heading-m">How we use cookies</h2>
         <p>We use cookies to:</p>
         <ul>
           <li>make our website work, for example by keeping it secure</li>
@@ -92,7 +92,7 @@ Cookies on the Respond to your letter website
 </table>
 </details>
 
-<h2>Change your cookie settings</h2>
+<h2 class="nhsuk-heading-m">Change your cookie settings</h2>
 <p>Some cookies, like those needed to measure how you use our website, are not needed for our website to work.</p>
 <p>These cookies can help us make our website better, but we'll only use them if you say it's OK.</p>
 
@@ -100,7 +100,7 @@ Cookies on the Respond to your letter website
   Choose which cookies we use
 </a>
 
-<h2>How we use the information we collect</h2>
+<h2 class="nhsuk-heading-m">How we use the information we collect</h2>
 <p>To find out about how we collect, store and use information about you or your visit, see the <a href="https://www.nhsbsa.nhs.uk/our-policies/privacy">NHSBSA website privacy policy.</a> </p>
 <p>If you do not want to change your cookie settings, you can close this tab.</p>
 
