--- a/app/views/v5-enquiry/cannot-confirm.html
+++ b/app/views/v5-enquiry/cannot-confirm.html
@@ -45,7 +45,7 @@
             </h1>
           </legend>
 
-          <p>The information you have given us does not prove you were entitled to free NHS prescriptions between 18 November 2019 to 30 November 2019.</p>
+          <p>The information you've given us does not prove you were entitled to free NHS prescriptions between 18 November 2019 to 30 November 2019.</p>
 
           <h3>If you think you were entitled</h2>
 
@@ -53,7 +53,7 @@
             <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription Prepayment Certificate between 18 November 2019 to 30 November 2019.</p>
           
 
-          <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
+          <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
 
           <h3>If you were not entitled</h2>
 
@@ -61,7 +61,7 @@
             <p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
          
 
-          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
+          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
           <p><a href="">Print this page</a></p>
           <h3>Feedback</h3>
           <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
