--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -179,7 +179,7 @@
 
     <p>Once we receive your proof by post, we will check it and contact you within 5 working days.</p>
     <h3>Feedback</h3>
-    <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
+    <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
     <p><a href="">Leave feedback</a></p>
 
   </div>
