--- a/app/views/v6-pcn/cannot-confirm-pcn.html
+++ b/app/views/v6-pcn/cannot-confirm-pcn.html
@@ -28,7 +28,7 @@ We cannot confirm you were entitled
           </h1>
         </legend>
 
-        <p>The information you have given us does not prove you were entitled to free NHS prescriptions between 13 March 2023 and 31 March 2023</p>
+        <p>The information you've given us does not prove you were entitled to free NHS prescriptions between 13 March 2023 and 31 March 2023</p>
 
 
         
@@ -42,7 +42,7 @@ We cannot confirm you were entitled
 
         <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim,
           you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a
-            review</a></p>
+            review</a>.</p>
 
             <h2 class="nhsuk-heading-m">If you think you were entitled</h2>
 
@@ -50,7 +50,7 @@ We cannot confirm you were entitled
 
             <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid
               Prescription Prepayment Certificate between 13 March 2023 and 31 March 2023.</p>
-            <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
+            <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
         <p><a href="">Print this page</a></p>
         <h3>Feedback</h3>
         <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
