--- a/app/views/v6-pcn/medical-conditions.html
+++ b/app/views/v6-pcn/medical-conditions.html
@@ -31,10 +31,14 @@ Do you have any of these medical conditions or disabilities?
     <h1 class="nhsuk-heading-l">Do you have any of these medical conditions or disabilities?</h1>
     <div class="nhsuk-form-group">
 
+      <p>These are the conditions that entitle you to apply for a medical exemption certificate.</p>
+
       <div class="nhsuk-inset-text">
         <span class="nhsuk-u-visually-hidden">Information: </span>
         <p>If you're unsure about the name of your condition or treatment, check with your doctor.</p>
       </div>
+
+      
       <ul>
         <li><strong>Cancer and are undergoing treatment</strong><br>Including treatment for the effects of cancer or the effects of cancer treatment.</li>
         <li><strong>Diabetes (type 1 or type 2)</strong><br>If you need medication to keep blood sugar levels stable.</li>
