--- a/app/views/v6-pcn/no-medex-radio.html
+++ b/app/views/v6-pcn/no-medex-radio.html
@@ -37,11 +37,16 @@ You didn't have a valid medical exemption certificate
           </legend>
 
           <p>Although you did not have a valid medical exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
-          <P>If your application is successful, you'll only have to pay the original prescription charge. You'll not have to pay your Penalty Charge.</P>
-          <h3>What do you want to do next?</h3>
+
+          <p>You have until <strong>10 July 2023</strong> to get a medical exemption certificate.</p>
+          <P>If your application is successful, you'll only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
+        
+
+            
+         
 
 
-
+  <h3>What do you want to do next?</h3>
           <form action="medex-radios" method="get" class="form">
 
             
@@ -58,8 +63,9 @@ You didn't have a valid medical exemption certificate
                 <div class="nhsuk-radios__item">
                     <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
                     <label class="nhsuk-label nhsuk-radios__label" for="no">
-                      Pay the total amount of £57.90
+                      Pay the full penalty charge amount of £57.90
                     </label>
+                   
                     
                 </div>
             </div>
@@ -79,9 +85,10 @@ You didn't have a valid medical exemption certificate
            
          
 
-          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
+          <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
           <p><a href="">Print this page</a></p>
-          
+         
+
               
               
                   
