--- a/app/views/v6-pcn/partial-payment-made-medex.html
+++ b/app/views/v6-pcn/partial-payment-made-medex.html
@@ -61,10 +61,10 @@ Payment confirmation
         
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              You still need to pay
+              Remaining amount
             </dt>
             <dd class="nhsuk-summary-list__value">
-              <p >£48.25</p>
+              <p ><b>£48.25</b></p>
             </dd>
         
             
@@ -79,8 +79,10 @@ Payment confirmation
       
       </div>
       <h3>Further payments</h3>
-      <p>You can use this service to pay the remaining amount of <strong>£48.25</strong>.</p>
+      <p>If your application for a medical exemption certificate is successful, you'll not need to pay the remaining amount.</p>
 
+      <p>You have until <strong>10 July 2023</strong> to get a medical exemption certificate. To apply, speak to your doctor, they give you an application form.</p>
+      <p>If you are not eligible for a medical exemption certificate you'll need to pay the remaining amount of <strong>£48.25</strong></p>
       <a href="payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
         Make another payment
       </button></a>
