--- a/app/views/v6-pcn/respond-to-your-letter.html
+++ b/app/views/v6-pcn/respond-to-your-letter.html
@@ -42,7 +42,7 @@ Respond to your letter
 
        <h3>How we use your information</h3>
 
-       <p>We use the information you provide to help us match your details. You can find out more about <a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice" target="_blank">how we use your information</a>.</p>
+       <p>We use the information you provide to help us match your details. You can find out more about <a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice">how we use your information</a>.</p>
 
 
     </div>
