--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -63,7 +63,7 @@
           <ul class="nhsuk-footer__list">
             <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="https://www.nhsbsa.nhs.uk/accessibility-statement-respond-your-letter" target="_blank">Accessibility</a></li>
             <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us</a></li>
-            <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="/v6-pcn/cookies/our-cookies">Cookies</a></li>
+            <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="/v6-pcn/cookies/our-cookies " target="_blank">Cookies</a></li>
             <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice" target="_blank">Privacy</a></li>
             <li class="nhsuk-footer__list-item"><a class="nhsuk-footer__list-item-link" href="https://www.nhsbsa.nhs.uk/our-policies/terms-and-conditions" target="_blank">Terms and conditions</a></li>
           </ul>
