--- a/app/views/v6-pcn/cannot-confirm-entitlement.html
+++ b/app/views/v6-pcn/cannot-confirm-entitlement.html
@@ -52,8 +52,8 @@
       <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="/v3/who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
       <p><a href="">Print this page</a></p>
       <h3>Feedback</h3>
-      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-      <p><a href="">Leave feedback</a></p>
+      <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
+      <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
             
           
   
