--- a/app/views/v6-pcn/more-information-needed.html
+++ b/app/views/v6-pcn/more-information-needed.html
@@ -38,8 +38,8 @@
       <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have received a letter</a>.</p>
       
       <h3>Feedback</h3>
-      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-      <p><a href="">Leave feedback</a></p>
+      <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
+      <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
            
     </div>
   </div>
