--- a/app/views/v6-pcn/we-could-not-find-medex.html
+++ b/app/views/v6-pcn/we-could-not-find-medex.html
@@ -74,9 +74,9 @@ You didn't have a valid medical exemption certificate
           <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
           <p><a href="">Print this page</a></p>
           <h3>Feedback</h3>
-          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
+          <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
 
-          <p><a href="url">Leave feedback</a></p>
+          <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
 
               
               
