--- a/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
+++ b/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
@@ -35,7 +35,7 @@
       <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have received a letter about claiming help with your health costs</a>.</p>
       <h3>Feedback</h3>
       <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
-      <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback</a></p>
+      <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
 
 
       
