--- a/app/views/v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-inset.html
+++ b/app/views/v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-inset.html
@@ -65,9 +65,9 @@
           <p>If you were not entitled to free NHS prescriptions but have an exeptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="url">Find out if you can ask for a review</a></p>
 
           <p><h3>Feedback</h3></p>
-          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
+          <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
 
-          <p><a href="url">Leave feedback</a></p>
+          <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
 
               
               
