--- a/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
+++ b/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
@@ -30,9 +30,8 @@ You have a HC3 certificate for limited help
 
 <h3>Feedback</h3>
 
-<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us provide a better service.</p>
-
-<a href="url">Leave feedback</a>
+<p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
+<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
 
 
     </div>
