--- a/app/views/v6-pcn/exemption-found-refund.html
+++ b/app/views/v6-pcn/exemption-found-refund.html
@@ -59,8 +59,8 @@ Exemption found refund
         
         
 <p><h2>Feedback</h2></p> 
-<p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service</p>  
-<p> <a href="">Leave feedback</a></p>
+<p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service</p>  
+<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
 
 
     </div>
