--- a/app/views/v6-pcn/we-could-not-verify-extra-details-pcn.html
+++ b/app/views/v6-pcn/we-could-not-verify-extra-details-pcn.html
@@ -56,9 +56,9 @@ We could not verify extra details
 
 <h3>Feedback</h3>
 
-<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us provide a better service.</p>
+<p>Leaving feedback only takes 5 minutes. Your comments will help us provide a better service.</p>
 
-<a href="url">Leave feedback</a>
+<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
 
 
 
