--- a/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
+++ b/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
@@ -16,8 +16,8 @@ You have a HC3 certificate for limited help
 
     <form action="check-name-input" method="get" class="form">
 
-      <span class="nhsuk-caption-l">Confirm your entitlement</span>
-      <h1 class="nhsuk-heading-xl">You have a HC3 certificate for limited help</h1>
+      <span class="nhsuk-caption-m">Confirm your entitlement</span>
+      <h1 class="nhsuk-heading-l">You have a HC3 certificate for limited help</h1>
       <div class="nhsuk-form-group">
 
 <p>We cannot verify your entitlement at the moment. Please contact us using the details below for further assistance:</p>
